...
        }
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        setupAccessibility()
        title = "Edit Stations"
        licenseTextArea.accessibilityTraits = UIAccessibilityTraits.header
        licenseTextArea.text = "Contains Transport for Greater Manchester data\nhttps://developer.tfgm.com/\n\nIcons provided by Icons8\nhttps://icons8.com\n\nIcons made by Pixel perfect from Flaticon\nhttp://www.flaticon.com/authors/pixel-perfect"
        dataHeader.isAccessibilityElement = true
        dataHeader.accessibilityTraits = UIAccessibilityTraits.header
    }
    
...
            self.stations.remove(at: indexPath.row)
            tableView.deleteRows(at: [indexPath], with: .fade)
        }
    }
    
    func setupAccessibility(){
        navigationItem.rightBarButtonItem?.accessibilityLabel = "Add a station"
    }
}

